--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "circuit-breaker-factory",
+  "name": "@springworks/circuit-breaker-factory",
   "version": "1.1.1",
   "description": "Factory module for creating circuit breakers, to be used with any type of callback.",
   "main": "index.js",
