--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ script:
 after_success:
   - NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
 sudo: false
+notifications:
+   email: false
