Join the keywords "circuit" and "breaker"

--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "keywords": [
     "stability",
-    "circuit",
-    "breaker"
+    "circuit-breaker"
   ],
   "author": "Springworks",
   "license": "MIT",
