--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "bunyan": "1.5.1",
     "chai": "1.10.0",
     "coveralls": "2.11.4",
-    "eslint": "0.11.0",
+    "eslint": "1.5.1",
+    "eslint-config-springworks": "3.1.1",
+    "eslint-plugin-mocha": "1.0.0",
     "istanbul": "0.3.21",
     "mocha": "2.3.3",
     "should": "4.6.5"
