--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
+sudo: false
 language: node_js
 node_js:
   - "0.12"
+  - "4"
 script:
   - npm run lint
   - npm test
 after_success:
-  - NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- --recursive -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
-sudo: false
+  - npm run coveralls
 notifications:
    email: false
