--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "NODE_ENV=test istanbul cover --report teamcity --report lcov _mocha -- --ui bdd --check-leaks --recursive --slow 200 --reporter spec test",
-    "lint": "eslint ."
+    "test": "NODE_ENV=test istanbul cover _mocha -- test",
+    "lint": "eslint .",
+    "coveralls": "cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -28,15 +29,14 @@
   },
   "homepage": "https://github.com/Springworks/node-circuit-breaker-factory",
   "devDependencies": {
+    "@springworks/test-harness": "1.0.5",
     "bunyan": "1.5.1",
-    "chai": "1.10.0",
     "coveralls": "2.11.4",
     "eslint": "1.5.1",
     "eslint-config-springworks": "3.1.1",
     "eslint-plugin-mocha": "1.0.0",
     "istanbul": "0.3.21",
-    "mocha": "2.3.3",
-    "should": "4.6.5"
+    "mocha": "2.3.3"
   },
   "dependencies": {
     "circuit-breaker-js": "0.0.1",
