--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "mocha": "2.3.3"
   },
   "dependencies": {
+    "@springworks/input-validator": "3.0.2",
     "circuit-breaker-js": "0.0.1",
-    "hoek": "2.16.3",
-    "@springworks/input-validator": "2.0.3"
+    "hoek": "2.16.3"
   }
 }
