--- a/package.json
+++ b/package.json
@@ -14,23 +14,23 @@
     "postpublish": "greenkeeper-postpublish"
   },
   "dependencies": {
-    "@springworks/input-validator": "5.0.3",
-    "circuit-breaker-js": "0.0.1"
+    "@springworks/input-validator": "^5.0.3",
+    "circuit-breaker-js": "^0.0.1"
   },
   "devDependencies": {
-    "@springworks/test-harness": "1.5.5",
-    "bunyan": "1.8.8",
-    "coveralls": "2.11.16",
-    "eslint": "3.17.1",
-    "eslint-config-springworks": "7.0.7",
-    "eslint-plugin-import": "2.2.0",
-    "eslint-plugin-mocha": "4.8.0",
-    "eslint-plugin-springworks": "2.0.1",
-    "greenkeeper-postpublish": "1.0.1",
-    "istanbul": "1.0.0-alpha.2",
-    "mocha": "3.2.0",
-    "pre-git": "3.14.0",
-    "semantic-release": "6.3.2"
+    "@springworks/test-harness": "^1.5.5",
+    "bunyan": "^1.8.8",
+    "coveralls": "^2.11.16",
+    "eslint": "^3.17.1",
+    "eslint-config-springworks": "^7.0.7",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-mocha": "^4.8.0",
+    "eslint-plugin-springworks": "^2.0.1",
+    "greenkeeper-postpublish": "^1.0.1",
+    "istanbul": "^1.0.0-alpha.2",
+    "mocha": "^3.2.0",
+    "pre-git": "^3.14.0",
+    "semantic-release": "^6.3.2"
   },
   "engines": {
     "node": ">=4",
